[package]
name = "r3d3_kiss3d"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.22.1"
nalgebra = "0.19.0"
rand = "0.7.2"
astro = "2.0.0"
